[package]
name = "mmrs"
version = "0.1.0"
authors = ["Ricky (Degausser) <Ricky@Hosfelt.io>"]
edition = "2018"
keywords = ["mattermost", "bot", "http", "POST"]
exclude = ["target", "Cargo.lock"]
description = "Small library to send POST requests to MatterMost Server"
license = "Apache-2.0" 

[dependencies]
reqwest = {version = "0.10.0", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }
mockito = "0"
