[package]
name = "mmrs"
version = "0.1.0"
authors = ["Ricky (Degausser) <Ricky@Hosfelt.io>"]
edition = "2018"
keywords = ["mattermost", "bot", "http", "POST"]
exclude = ["target", "Cargo.lock"]
description = "Small library to send POST requests to MatterMost Server"
homepage = "https://github.com/deg4uss3r/mmrs"
repository = "https://github.com/deg4uss3r/mmrs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
reqwest = {version = "0.10.0", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }
mockito = "0"
