[package]
name = "mmrs"
version = "0.1.4"
authors = ["Ricky (Degausser) <Ricky@Hosfe.lt>"]
edition = "2024"
keywords = ["mattermost", "bot", "http", "POST"]
exclude = ["target", "Cargo.lock"]
description = "Small library to send POST requests to MatterMost Server"
homepage = "https://github.com/deg4uss3r/mmrs"
repository = "https://github.com/deg4uss3r/mmrs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
reqwest = {version = "0.13.1", features = ["json", "socks", "rustls"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
mockito = "1.7.1"
